--- a/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_major_version_9.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_major_version_9.adoc
@@ -45,7 +45,7 @@ This is a breaking change from previous versions, which supported JVM 8 and high
 Your build can still target lower JVM versions using <<toolchains.adoc#toolchains, Toolchains>> for compilation, testing and other workers (Checkstyle, Javadoc, etc).
 
 The <<gradle_wrapper.adoc#gradle_wrapper_reference,Gradle wrapper>> and command-line launcher can run with JVM 8, but it still requires a newer JVM to start the build.
-For more, see the <<#minimum_daemon_jvm_version,Running Gradle on older JVMs>> section below.
+For more, see the <<upgrading_version_8.adoc#minimum_daemon_jvm_version,Running Gradle on older JVMs>> section below.
 
 <<tooling_api.adoc#embedding,Gradle Tooling API>> and <<test_kit#test_kit, TestKit>> remain compatible with JVM 8 and higher.
 
@@ -87,7 +87,7 @@ These changes may affect those who use Groovy directly or indirectly in Gradle, 
 
 Groovy 4 no longer treats getters with an `is` prefix and a `Boolean` return type as properties.
 Gradle still recognizes these as properties for now, but this behavior will change in Gradle 10 to align with Groovy 4.
-See <<#groovy_boolean_properties,the deprecation notice>> for more details.
+See <<upgrading_version_8.adoc#groovy_boolean_properties,the deprecation notice>> for more details.
 
 ==== `DELEGATE_FIRST` closures may now prefer the delegate in some cases
 
@@ -228,7 +228,7 @@ Configuring project ':subproject1' without an existing directory is not allowed.
 > Make sure the project directory exists and is writable.
 ----
 
-See <<deprecated_missing_project_directory>> for more details.
+See <<upgrading_version_8.adoc#deprecated_missing_project_directory>> for more details.
 
 == Task changes
 
@@ -795,7 +795,7 @@ This property was deprecated in Gradle 8.0 and was replaced with the `destinatio
 
 === Removal of `Project#exec`, `Project#javaexec`, and script-level counterparts
 
-The following helper methods for launching external processes were <<#deprecated_project_exec,deprecated in Gradle 8.11>> and have now been removed in Gradle 9.0.0:
+The following helper methods for launching external processes were <<upgrading_version_8.adoc#deprecated_project_exec,deprecated in Gradle 8.11>> and have now been removed in Gradle 9.0.0:
 
 * `org.gradle.api.Project#exec(Closure)`
 * `org.gradle.api.Project#exec(Action)`
