--- a/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_8.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_8.adoc
@@ -14,10 +14,10 @@
 
 [[upgrading_version_8]]
 
-= Upgrading your build from Gradle 8.x to 8.14.3
+= Upgrading within Gradle 8.x
 
-This chapter provides the information you need to migrate your Gradle 8.x builds to Gradle 8.14.3.
-For migrating from Gradle 4.x, 5.x, 6.x, or 7.x, see the <<upgrading_version_7.adoc#upgrading_version_7, older migration guide>> first.
+This chapter provides the information you need to migrate your Gradle 8.x builds to Gradle {gradleVersion8}.
+For migrating from Gradle 7.x, see the <<upgrading_version_7.adoc#upgrading_version_7, older migration guide>> first.
 
 We recommend the following steps for all users:
 
@@ -33,7 +33,7 @@ Alternatively, you can run `gradle help --warning-mode=all` to see the deprecati
 Some plugins will break with this new version of Gradle because they use internal APIs that have been removed or changed.
 The previous step will help you identify potential problems by issuing deprecation warnings when a plugin tries to use a deprecated part of the API.
 +
-. Run `gradle wrapper --gradle-version 8.14` to update the project to 8.14.
+. Run `gradle wrapper --gradle-version {gradleVersion8}` to update the project to {gradleVersion8}.
 . Try to run the project and debug any errors using the <<troubleshooting.adoc#troubleshooting, Troubleshooting Guide>>.
 
 [[changes_8.14]]
