--- a/platforms/documentation/docs/src/docs/userguide/authoring-builds/basics/intro_multi_project_builds.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/authoring-builds/basics/intro_multi_project_builds.adoc
@@ -13,7 +13,7 @@
 // limitations under the License.
 
 [[intro_multi_project_builds]]
-= Multi-Project Build Basics
+= Structuring Multi-Project Builds
 
 Gradle supports multi-project builds.
 
