--- a/platforms/documentation/docs/src/docs/userguide/authoring-builds/getting_started_dev.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/authoring-builds/getting_started_dev.adoc
@@ -15,47 +15,37 @@
 [[dev_introduction]]
 = Getting Started
 
-++++
-<div class="badge-wrapper">
-    <a class="badge" href="https://dpeuniversity.gradle.com/app/courses/012de84f-fcd3-45d4-9c4c-284382eb3f3f/" target="_blank">
-        <span class="badge-type button--blue">LEARN</span>
-        <span class="badge-text">Introduction to Gradle for Developers&nbsp;&nbsp;&nbsp;&gt;</span>
-    </a>
-</div>
-++++
-
-Build engineers that are ready to configure custom build logic and write their own plugins should start here.
+Build engineers that are ready to configure and organize custom build logic should start here.
 
 To get started engineering Gradle builds:
 
-1. Read the <<gradle_author_intro,build basics chapters>>.
-2. Follow the <<author_tutorial,tutorial>> for a hands-on approach.
+1. Read the <<gradle_author_intro,Beyond the Basics chapters>>.
+2. Follow the <<author_tutorial,Intermediate Tutorial>> for a hands-on approach.
 
 [[gradle_author_intro]]
-== 1. Authoring Gradle Builds Basics
+== 1. Beyond the Gradle Basics
 
-The basics section goes through some Gradle authoring basics so that you can quickly understand how to configure builds, create tasks, and write plugins.
+The beyond the basics section goes through some Gradle authoring basics so that you can quickly understand how to configure builds, create tasks, and organize logic.
 
 [sidebar]
 _Training level_: **Intermediate** +
 _Reading time_: **35 minutes**
 
-The introduction covers:
+This section covers:
 
-<<gradle_directories.adoc#gradle_directories,Part 1.>> Gradle Directories +
-<<intro_multi_project_builds.adoc#intro_multi_project_builds,Part 2.>> Multi-Project Builds +
+<<gradle_directories.adoc#gradle_directories,Part 1.>> Anatomy of a Gradle Build +
+<<intro_multi_project_builds.adoc#intro_multi_project_builds,Part 2.>> Structuring Multi-Project Builds +
 <<build_lifecycle.adoc#build_lifecycle,Part 3.>> Gradle Build Lifecycle +
-<<writing_settings_files.adoc#writing_settings_files,Part 4.>> Writing Settings Files +
-<<writing_build_scripts.adoc#writing_build_scripts,Part 5.>> Writing Build Scripts +
-<<tutorial_using_tasks.adoc#tutorial_using_tasks,Part 6.>> Using Tasks +
-<<writing_tasks.adoc#writing_tasks,Part 7.>> Writing Tasks +
-<<plugins.adoc#using_plugins,Part 8.>> Using Plugins +
-<<writing_plugins.adoc#writing_plugins,Part 9.>> Writing Plugins +
+<<writing_build_scripts.adoc#writing_build_scripts,Part 4.>> Writing Build Scripts +
+<<gradle_managed_types.adoc#,Part 5.>> Gradle Managed Types +
+<<dependencies.adoc#,Part 6.>> Declaring and Managing Dependencies +
+<<writing_tasks.adoc#writing_tasks,Part 7.>> Creating and Registering Tasks +
+<<plugins.adoc#using_plugins,Part 8.>> Working With Plugins +
 
 [[author_tutorial]]
-== 2. Authoring Gradle Builds Tutorial
+== 2. Intermediate Gradle Tutorial
 
-The tutorial will take you from Gradle initialization all the way through authoring a simple script plugin.
+The tutorial will take you from Gradle initialization all the way through registering tasks and the basics of plugins.
 No previous experience is necessary but a basic knowledge of Java and Kotlin is nice to have.
 
 If you need to install Gradle before the tutorial, you can see how to do so in the <<installation.adoc#installation,installation section>>.
